@@ -365,8 +365,7 @@ man3_object_strings_DATA = \
         $(DOX_MAN_DIR)/man3/hwloc_obj_type_string.3 \
         $(DOX_MAN_DIR)/man3/hwloc_obj_type_snprintf.3 \
         $(DOX_MAN_DIR)/man3/hwloc_obj_attr_snprintf.3 \
-        $(DOX_MAN_DIR)/man3/hwloc_type_sscanf.3 \
-        $(DOX_MAN_DIR)/man3/hwloc_type_sscanf_as_depth.3
+        $(DOX_MAN_DIR)/man3/hwloc_type_sscanf.3
 
 man3_object_info_attrsdir = $(man3dir)
 man3_object_info_attrs_DATA = \
