@@ -206,7 +206,6 @@ extern "C" {
 #define hwloc_obj_type_snprintf HWLOC_NAME(obj_type_snprintf )
 #define hwloc_obj_attr_snprintf HWLOC_NAME(obj_attr_snprintf )
 #define hwloc_type_sscanf HWLOC_NAME(type_sscanf)
-#define hwloc_type_sscanf_as_depth HWLOC_NAME(type_sscanf_as_depth)
 
 #define hwloc_obj_get_info_by_name HWLOC_NAME(obj_get_info_by_name)
 #define hwloc_obj_add_info HWLOC_NAME(obj_add_info)
@@ -663,6 +662,8 @@ extern "C" {
 #define hwloc_backend_distances_add_commit HWLOC_NAME(backend_distances_add_commit)
 
 /* hwloc/deprecated.h */
+
+#define hwloc_type_sscanf_as_depth HWLOC_NAME(type_sscanf_as_depth)
 
 #define hwloc_distances_add HWLOC_NAME(distances_add)
 
